implement the mind map parser (to markdown) and use normal document splitter for embedding mind map file; display the progress of embedding; add comment to embedding doc record;